--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-		<title>Sample App</title>
+		<title>Intro To Flux: Taylor Hakes</title>
 	</head>
 	<body>
 		<div id='root'></div>
